Updated the layout.scss to fix a mobile alignment bug, reworked the landing page templates, added a JS snippet to close the model on desktop

--- a/packages/layouts/bolt-layout/src/layout.scss
+++ b/packages/layouts/bolt-layout/src/layout.scss
@@ -39,7 +39,8 @@ $_bolt-layout-item-min-width: calc(#{bolt-breakpoint(xxsmall)} / 3);
  */
 bolt-layout {
   // Setting up vars to be customized
-  --l-bolt-layout-template: 1fr;
+  --l-bolt-layout-template: minmax(0, 1fr);
+  // --l-bolt-layout-template: 1fr;
   --l-bolt-layout-gutter: var(--bolt-spacing-x-medium);
   --l-bolt-layout-row-gutter: var(--bolt-spacing-y-medium);
   --l-bolt-layout-padding-top: var(--bolt-spacing-y-medium);
@@ -164,7 +165,8 @@ bolt-layout {
 
   // Special sub-layout that pushes last item to the bottom
   &[template~='full-vertical-push-last-item'] {
-    --l-bolt-layout-template: 1fr;
+    --l-bolt-layout-template: minmax(0, 1fr);
+    // --l-bolt-layout-template: 1fr;
     height: 100%;
 
     > bolt-layout-item:last-of-type {
@@ -247,7 +249,8 @@ bolt-layout {
 
   // Sub-layout resets all defaults. Everything stays the same except for padding getting zeroed out.
   bolt-layout {
-    --l-bolt-layout-template: 1fr;
+    // --l-bolt-layout-template: fr;
+    --l-bolt-layout-template: minmax(0, 1fr);
     --l-bolt-layout-gutter: var(--bolt-spacing-x-medium);
     --l-bolt-layout-row-gutter: var(--bolt-spacing-y-medium);
     --l-bolt-layout-padding-top: 0;
